test_suite/tests/ui/struct-representation/internally-tagged-unit.stderr
error: #[serde(tag = "...")] can only be used on enums and structs with named fields
 --> $DIR/internally-tagged-unit.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

