test_suite/tests/ui/struct-representation/internally-tagged-unit.rs
#[macro_use]
extern crate serde_derive;

#[derive(Serialize)]
#[serde(tag = "type")]
struct U;

fn main() {}
